[project]
name = "python-template"
version = "0.1.0"
description = "A Flask application for the NB-Signup-Form"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.11"

dependencies = [
    "Flask>=3.0.0",
    "gunicorn>=20.1.0"  # gunicorn yahan aise add hota hai
    # ...aur baaki dependencies jaise blinker, click, etc. bhi yahan add kar sakte hain
    # "blinker>=1.9.0",
    # "click>=8.1.8",
    # "itsdangerous>=2.2.0",
    # "jinja2>=3.1.6",
    # "markupsafe>=3.0.2",
    # "werkzeug>=3.1.3"
]